--- a/client/main.html
+++ b/client/main.html
@@ -5,4 +5,12 @@
 
 <body>
   <div id="render-target"></div>
+
+  <script>
+	$(document).ready(function() {
+		console.log('hi');
+	});
+  </script>
+
+  <script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>
 </body>
